kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gojo-api-service
spec:
  selector:
    app: gojo-api
  ports:
    - protocol: TCP
      port: 80
      name: "http-server"
      targetPort: "http-server"
    - protocol: TCP
      port: 90
      name: "grpc-server"
      targetPort: "grpc-server"
  type: ClusterIP
