kubernetes/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gojo-cache-service
spec:
  selector:
    app: gojo-cache
  ports:
    - protocol: TCP
      port: 6380
      name: "cache"
      targetPort: "cache"
  type: ClusterIP
