kubernetes/meili-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gojo-meili-service
spec:
  selector:
    app: gojo-meili
  ports:
    - protocol: TCP
      port: 7700
      name: "meili"
      targetPort: "meili"
  type: ClusterIP
