kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gojo-postgres-service
spec:
  selector:
    app: gojo-postgres
  ports:
    - protocol: TCP
      port: 5432
      name: "postgres"
      targetPort: "postgres"
  type: ClusterIP
