kubernetes/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gojo-grpc-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"

spec:
  ingressClassName: nginx
  rules:
  - host: grpc.gojo.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gojo-api-service
            port:
              number: 90

  tls:
  - hosts:
    - grpc.gojo.test
    secretName: gojo-api-cert
