kubernetes/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gojo-http-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: gojo.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gojo-api-service
            port:
              number: 80

  tls:
  - hosts:
    - gojo.test
    secretName: gojo-api-cert
